<resources>
    <string name="app_name">Book store</string>
    <string name="editor_activity">Edit a book</string>
    <string name="new_book">Add new book</string>
    <string name="book_title">Book name</string>
    <string name="price">Book price</string>
    <string name="quantity">Quantity</string>
    <string name="pub_name">Publisher name</string>
    <string name="pub_num">Publisher number</string>
    <string name="publisher_email">Publisher Email</string>
    <string name="no_items">No items found in inventory, click add a book to add a new one</string>
    <string name="edit">Edit book</string>
    <string name="sell">Sell a copy</string>
    <string name="details">Book details</string>
</resources>
